Start of me editing my html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   </head>
   <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
-    <p>This is the beginning of my website home page.</p>
-    <p>It will eventually contain a list of links to all my blogs.</p>
+    <p>This is the beginning of my website home page, can't wait to see what it looks like by the end of this.</p>
+    <p>It now contain a list of links to all my blogs.
+      Check them out XD
+    </p>
   </body>
 </html>
