update to main html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       I've been bouncing from job to job since I left high school,
       mainly worked in the dairy industry but felt like that was a waste of the potential I felt I had, 
       that and it was bloody lonesome in the country usually the middle of nowhere, hours away from friends and family, 
-      so I bounced from that to landscaping, 
+      so I bounced(literally) from that to landscaping, 
       then digital design and sign writing, 
       then engineering and welding, 
       then building, 
@@ -23,8 +23,8 @@
       well.... you get the picture haha.
      
       I've always liked playing around on computers and 
-      the idea of potentially earning money with them sometime in the future.
-      I'm really eager to to learn and glad I started this journey.
+      the idea of potentially earning money with them sometime in the future excites me.
+      I'm really eager to to learn and glad I started this journey with you all.
     </p>
     <p>It now contain a list of links to all my blogs.
       Check them out XD
