--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>My blog</title>
-    <link hred="~/workspace/devacademy/syk01N3R//styles/main.css" rel="stylesheet" type="text/css">
+    <link href="~/workspace/devacademy/syk01N3R//styles/main.css" rel="stylesheet" type="text/css">
 
   </head>
   <body>
