--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>My blog</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css">
-    <link href="blog/te-houtaewa-template.html" rel="blog" type="link" id="link" value="link"
+    <link href="blog/te-houtaewa-template.html" rel="blog" type="link" id="link" value="link">
   </head>
   <body>
     <h1>Kia ora Taiao! Hello World!</h1>
@@ -27,8 +27,8 @@
       the idea of potentially earning money with them sometime in the future excites me.
       I'm really eager to to learn and glad I started this journey with you all.
     </p>
-    <p>It now contain a list of links to all my blogs.</p>p>
-      <p value="link">Blog
-    </p>
+    <p>It now contain a list of links to all my blogs.</p>
+      <a href="blog/te-houtaewa-template.html">Blog
+      </a>
   </body>
 </html>
