--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
    </head>
   <body>
     <h1>Kia ora Taiao! Hello World!</h1>
-    <p>This is the beginning of my website home page, 
-      can't wait to see what it looks like by the end of this.</p> 
+    <h2>This is the beginning of my website home page, 
+      can't wait to see what it looks like by the end of this.</h2> 
       
       <p>Kia ora, I'm Mitchell, I'm 30yo and this is the start of my Dev journey.
       Just a quick run through my career and how I got here.</p>
@@ -29,6 +29,7 @@
       the idea of potentially earning money with them sometime in the future excites me.
       I'm really eager to to learn and glad I started this journey with you all.
     </p>
+    <img src="/Users/mitchellcampbell/Pictures/Photos Library.photoslibrary/resources/derivatives/E/ECFCE877-D3D0-4B8B-95DD-CB78B9243AB5_1_105_c.jpeg"
     <p>It now contain a list of links to all my blogs.</p>
 
     <ul>
