--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       the idea of potentially earning money with them sometime in the future excites me.
       I'm really eager to to learn and glad I started this journey with you all.
     </p>
-    <img src="/Users/mitchellcampbell/Pictures/Photos Library.photoslibrary/resources/derivatives/E/ECFCE877-D3D0-4B8B-95DD-CB78B9243AB5_1_105_c.jpeg"
     <p>It now contain a list of links to all my blogs.</p>
 
     <ul>
@@ -37,9 +36,9 @@
         </li>
       </a>
       
-        <li><a></a>Reflections</li>
-        <li>2</li>
-        <li>3</li>
+        <li><a></a>Identity and Values</li>
+        <li>Still to come</li>
+        <li>Learning Plan</li>
     </ul>
   </body>
 </html>
