--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       the idea of potentially earning money with them sometime in the future excites me.
       I'm really eager to to learn and glad I started this journey with you all.
     </p>
-    <p>It now contain a list of links to all my blogs.</p>
-
+    <h3>It now contain a list of links to all my blogs.</h3>
     <ul>
       <li><a href="blog/te-houtaewa-template.html"> Te Houtaewa
         </li>
