--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         </li>
       </a>
       
-        <li><a></a>Identity and Values</li>
-        <li>Still to come</li>
-        <li>Learning Plan</li>
+        <li><a href="identity-and-values/"> Identity and Values</li>
+        </a>
+        <li><a href="html-css.html/html-css.html"> html-css</li>
+        </a>
+        <li><a href="learning-plan/learning-plan.html">Learning Plan</li>
+        </a>
     </ul>
   </body>
 </html>
