--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <title>My blog</title>
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <link href="blog/te-houtaewa-template.html" rel="blog" type="link" id="link" value="link">
-    <link href="html-css.html/html-css.html" rel="html-css" type="text/css">
-    <link href="identity-and-values/indentity-and-values.html">
-    <link href="learning-plan/learning-plan.html">
+    <link href="blog/html-css.html" rel="html-css" type="text/css">
+    <link href="blog/indentity-and-values.html">
+    <link href="blog/learning-plan.html">
    </head>
   <body>
     <h1>Kia ora Taiao! Hello World!</h1>
