--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>My blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/main.css" rel="stylesheet" type="text/css">
     <link href="blog/te-houtaewa-template.html" rel="blog" type="link" id="link" value="link">
     <link href="blog/html-css.html" rel="html-css" type="text/css">
@@ -15,11 +16,11 @@
           </li>
         </a>
         
-          <li><a href="identity-and-values/"> Identity and Values</li>
+          <li><a href="blog/identity-and-values.html"> Identity and Values</li>
           </a>
-          <li><a href="html-css.html/html-css.html"> html-css</li>
+          <li><a href="blog/html-css.html"> html-css</li>
           </a>
-          <li><a href="learning-plan/learning-plan.html">Learning Plan</li>
+          <li><a href="blog/learning-plan.html">Learning Plan</li>
           </a>
       </ul>
     </nav>
@@ -46,7 +47,7 @@
       the idea of potentially earning money with them sometime in the future excites me.
       I'm really eager to learn and glad I started this journey with you all.
     </p>
-    <h3>It now contain a list of links to all my blogs.</h3>
+    <h3>It now contains a list of links to all my blogs, almost.</h3>
     
   </body>
 </html>
