made IQ EQ live

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="blog/html-css.html" rel="html-css" type="text/css">
     <link href="blog/indentity-and-values.html">
     <link href="blog/learning-plan.html">
+    <link href="blog/emotional-intelligence.html"
     
    </head>
   <body>
