--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="blog/html-css.html"> html-css</li>
           </a>
           <li><a href="blog/learning-plan.html">Learning Plan</li>
+            <li><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></li>
           </a>
       </ul>
     </nav>
