--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="blog/html-css.html" rel="html-css" type="text/css">
     <link href="blog/indentity-and-values.html">
     <link href="blog/learning-plan.html">
-    <link href="blog/emotional-intelligence.html"
+    <link href="blog/emotional-intelligence.html">
+    <link href="blog/javascript-dom.html">
     
    </head>
   <body>
@@ -24,6 +25,7 @@
           </a>
           <li><a href="blog/learning-plan.html">Learning Plan</li>
             <li><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></li>
+            <li><link href="blog/javascript-dom.html">javascript-dom</li>
           </a>
       </ul>
     </nav>
