fixed link from index to java

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </a>
           <li><a href="blog/learning-plan.html">Learning Plan</li>
             <li><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></li>
-            <li><link href="blog/javascript-dom.html">javascript-dom</li>
+            <li><a href="blog/javascript-dom.html">javascript-dom</a></li>
           </a>
       </ul>
     </nav>
