--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link href="blog/learning-plan.html">
     <link href="blog/emotional-intelligence.html">
     <link href="blog/javascript-dom.html">
-    
+    <style>
+      li {
+        font-display:unset
+      }
+    </style>
    </head>
   <body>
     <h1>Kia ora Taiao! Hello World!</h1>
