--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="blog/learning-plan.html">
     <link href="blog/emotional-intelligence.html">
     <link href="blog/javascript-dom.html">
+    <link href="blog/neuroplasticity.html">
     <style>
       li {
         font-display:unset
@@ -20,16 +21,15 @@
     <nav>
       <ul>
         <li><a href="blog/te-houtaewa-template.html"> Te Houtaewa
-          </li>
-        </a>
-        
-          <li><a href="blog/identity-and-values.html"> Identity and Values</li>
+          </li></a>
+        <li><a href="blog/identity-and-values.html"> Identity and Values</li>
           </a>
           <li><a href="blog/html-css.html"> html-css</li>
           </a>
           <li><a href="blog/learning-plan.html">Learning Plan</li>
             <li><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></li>
             <li><a href="blog/javascript-dom.html">javascript-dom</a></li>
+            <li><a href="blog/neuroplasticity.html">neuroplasticity</a></li>
           </a>
       </ul>
     </nav>
