--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="blog/neuroplasticity.html">
     <style>
       li {
-        font-display:unset
-      }
+        font-display: unset;
+        }
     </style>
    </head>
   <body>
