--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="blog/emotional-intelligence.html">
     <link href="blog/javascript-dom.html">
     <link href="blog/neuroplasticity.html">
+    <link href="blog/te-whare-tapa-wha.html">
     <style>
       li {
         font-display: unset;
@@ -30,6 +31,7 @@
             <li><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></li>
             <li><a href="blog/javascript-dom.html">javascript-dom</a></li>
             <li><a href="blog/neuroplasticity.html">neuroplasticity</a></li>
+            <li><a href="blog/te-whare-tapa-wha.html">Te whare tapa wha</a></li>
           </a>
       </ul>
     </nav>
