--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="blog/javascript-dom.html">
     <link href="blog/neuroplasticity.html">
     <link href="blog/te-whare-tapa-wha.html">
+    <link href="blog/problem-solving.html">
     <style>
       li {
         font-display: unset;
@@ -27,12 +28,13 @@
           </a>
           <li><a href="blog/html-css.html"> html-css</li>
           </a>
-          <li><a href="blog/learning-plan.html">Learning Plan</li>
+          <li><a href="blog/learning-plan.html">Learning Plan</a></li>
             <li><a href="blog/emotional-intelligence.html">Emotional Intelligence</a></li>
             <li><a href="blog/javascript-dom.html">javascript-dom</a></li>
             <li><a href="blog/neuroplasticity.html">neuroplasticity</a></li>
             <li><a href="blog/te-whare-tapa-wha.html">Te whare tapa wha</a></li>
-          </a>
+            <li><a href="blog/problem-solving.html">Problem Solving</a></li>
+          
       </ul>
     </nav>
     <h2>This is the beginning of my website home page, 
