--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="blog/neuroplasticity.html">
     <link href="blog/te-whare-tapa-wha.html">
     <link href="blog/problem-solving.html">
+    <link href="blog/foundations-reflection.html">
     
    </head>
   <body>
@@ -29,6 +30,7 @@
             <li><a href="blog/javascript-dom.html">javascript-dom</a></li>
             <li><a href="blog/neuroplasticity.html">neuroplasticity</a></li>
             <li><a href="blog/te-whare-tapa-wha.html">Te whare tapa wha</a></li>
+            <li><a href="blog/foundations-reflection.html">Foundations Reflection</a></li>
             <li><a href="blog/problem-solving.html">Problem Solving</a></li>
           </ul>
     </nav>
